// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bus Result Component: renders many buses with mock data  1`] = `
<div>
  <div />
  <table
    className="table"
  >
    <thead>
      <tr>
        <th
          id="bus-name"
        >
          Bus Name
        </th>
        <th
          id="mins-left"
        >
          Mins Left
        </th>
        <th
          id="eta"
        >
          ETA
        </th>
        <th
          id="last-location"
        >
          Last Location
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#fcee1f",
            "color": "#000000",
          }
        }
      >
        <td>
          <b>
            100N Yellow
          </b>
        </td>
        <td>
          5m
        </td>
        <td
          className="no-wrap"
        >
          5:32:40
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#cccccc",
            "color": "#000000",
          }
        }
      >
        <td>
          <b>
            130S Silver Limited
          </b>
        </td>
        <td>
          7m
        </td>
        <td
          className="no-wrap"
        >
          5:34:15
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#cccccc",
            "color": "#000000",
          }
        }
      >
        <td>
          <b>
            130N Silver Limited
          </b>
        </td>
        <td>
          9m
        </td>
        <td
          className="no-wrap"
        >
          5:36:15
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#5a1d5a",
            "color": "#ffffff",
          }
        }
      >
        <td>
          <b>
            220S Illini Limited
          </b>
        </td>
        <td>
          18m
        </td>
        <td
          className="no-wrap"
        >
          5:45:00
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#fcee1f",
            "color": "#000000",
          }
        }
      >
        <td>
          <b>
            100S Yellow
          </b>
        </td>
        <td>
          19m
        </td>
        <td
          className="no-wrap"
        >
          5:46:40
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#5a1d5a",
            "color": "#ffffff",
          }
        }
      >
        <td>
          <b>
            220N Illini Limited
          </b>
        </td>
        <td>
          20m
        </td>
        <td
          className="no-wrap"
        >
          5:47:00
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#cccccc",
            "color": "#000000",
          }
        }
      >
        <td>
          <b>
            130S Silver Limited
          </b>
        </td>
        <td>
          26m
        </td>
        <td
          className="no-wrap"
        >
          5:53:00
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
      <tr
        className="resultRow"
        style={
          Object {
            "backgroundColor": "#cccccc",
            "color": "#000000",
          }
        }
      >
        <td>
          <b>
            130N Silver Limited
          </b>
        </td>
        <td>
          28m
        </td>
        <td
          className="no-wrap"
        >
          5:55:00
        </td>
        <td>
          <button
            aria-label={null}
            className="btn btn-success"
            onClick={[Function]}
            type="button"
          >
            Location
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Bus Result Component: renders no buses coming 1`] = `
<h4>
  No buses coming in the next hour.
</h4>
`;

exports[`Bus Result Component: renders the proper h4 with invalid request 1`] = `
<h4>
  This page cannot be loaded.
</h4>
`;
